--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <div>
         <h1>Prachya Thongsan</h1>
     </div>
+    <div>
+        <img src="picture.JPG">
+    </div>
 </body>
 
 </html>
